fixed extra spacing issue on the right

--- a/src/components/Comments/Comments.scss
+++ b/src/components/Comments/Comments.scss
@@ -4,11 +4,9 @@
 
 /* =============== Comments =============== */
 .comments {
-  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: $padding * 2;
 
   @media (min-width: 768px) {
     padding: $padding * 3;
