--- a/src/components/MediaList/MediaList.scss
+++ b/src/components/MediaList/MediaList.scss
@@ -1,7 +1,6 @@
 @use "../../partials/variables" as *;
 @use "../../partials/mixins" as *;
 .media-list {
-  width: 100%;
   display: flex;
   flex-direction: column;
   padding: $padding * 2;
